plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.goev'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations.configureEach {
	exclude group: 'org.slf4j', module: 'slf4j-simple'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
	mavenLocal()
}

dependencies {

	compileOnly 'org.projectlombok:lombok'



	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	runtimeOnly 'mysql:mysql-connector-java:8.0.32'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-jooq'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.google.code.gson:gson:2.9.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'software.amazon.awssdk:secretsmanager:2.17.261'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.2.3'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'joda-time:joda-time:2.12.1'
	implementation 'software.amazon.awssdk:protocol-core:2.17.261'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.466'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.17.0'





	if (System.getenv("ENV") == 'local' || System.getenv("ENV") == null) {
		implementation 'com.goev.db:central-db-local:1.0'
		implementation 'com.goev:lib-local:1.0-SNAPSHOT'
	} else if (System.getenv("ENV") == 'staging') {
		implementation 'com.goev.db:central-db-staging:1.0'
		implementation 'com.goev:lib-staging:1.0-SNAPSHOT'
	} else if (System.getenv("ENV") == 'production') {
		implementation 'com.goev.db:central-db-production:1.0'
		implementation 'com.goev:lib-production:1.0-SNAPSHOT'
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
